before deploying to github

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ux-challenge",
+  "name": "hero-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://yachinyou.github.io/hero-app",
   "dependencies": {
     "bootstrap": "^4.1.1",
     "react": "^16.4.1",
@@ -16,6 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
